@@ -72,14 +72,14 @@ Dungeon 0;
 
                 Square, Random { Walkable=true; }
 		{
-			Item = mine { Team = MONSTER_TEAM; }
-			Times = 0+rand%3;
+			Item = mine { Team = MONSTER_TEAM; Active = true; }
+			Times = 0+rand%4;
 		}
 
 		Square, Random { Walkable=true; }
 		{
-			Item = beartrap { Team = MONSTER_TEAM; }
-			Times = 0+rand%3;
+			Item = beartrap { Team = MONSTER_TEAM; Active = true; }
+			Times = 0+rand%4;
 		}
 
 		RoomDefault
