@@ -1,3 +1,8 @@
+August 9 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>
+
+	* Added parameter IgnoreVisibility to all stack::DrawContents and their calls
+	* Tweaked the number of beartraps and mines in level (now 0-4 of each)
+
 August 8 2002 Timo Kiviluoto <sonor@phpoint.fi>
 
 	* Carnivorous plants are now longer born inside walls nor over monsters
